--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          <img class="banner" src="./images/banner.jpg" alt="banner">
          <h1>Learn something new everyday</h1>
          <p>Lorem ipsum dolor sit amet, <br>Consecteur adispscing elit<br></p>
-         <button class="clickme">Start here</button>
+         <p class="clickme">Start here</p>
 
      </div>
 
