--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="headercolmar">
             <nav>
             <img src="./images/ic-logo.svg" alt="logo">
-            <h1 class ="academy">Colmar Academy</h1>
+            <h1>Colmar <strong>Academy</strong></h1>
             <a href="#">On Campus</a>
             <a href="#">Online</a>
             <a href="#">Companies</a>
