--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <!----Fifth part-->
    
          
-         <div class="classtype2"> <!--This is a new class I created. You needed a div to hold your class 'secondthesis' and column 2 information -->
+         <div class="classtype2"> 
             <div class="secondthesis">
                 <h1>Thesis Exhibit</h1>
             <video src="./videos/thesis.mp4"></video>
@@ -178,7 +178,7 @@
                    </div>
                   </div>
         
-                  <div class="secondinfo"> <!--You need to contain your info divs seperatly, otherwise when you use 'display: flex;' on your 'column2information' class, your info sections will show up beside eachother rather then ontop of one another.-->
+                  <div class="secondinfo"> 
                   <div class="infox">
                     <img src="./images/thesis-now-and-then.jpg" alt="">
                    </div>
