--- a/index.html
+++ b/index.html
@@ -192,7 +192,17 @@
             </div>
         
             <footer>
-                    <h4>&copy; 2016 Colmar Academy .All rights reserved</h4>
+            <nav class="flex">
+                 <div> &copy; 2016  Colmar Academy . All rights reserved </div>
+
+                 <div class="menu">
+                     <ul>
+                         <li>Terms</li>
+                         <li>Privacy</li>
+                     </ul>
+                 </div>
+            </nav>
+             
             </footer>
    
 
