--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             <a href="#">Sign in</a>
             </nav>
         </div>
+        <div class="mobile">
+            <img src="./images/ic-login.svg" alt="">
+            <img src="./images/ic-on-campus.svg" alt="">
+            <img src = "./images/ic-online.svg" alt="">
+
+           
+        </div>
      </header>
 
      <!---First part-->
