--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <div class="sitecontainer">
       <header>
         <div class="headercolmar">
-            <nav>
+            <div class="logo">
             <img src="./images/ic-logo.svg" alt="logo">
+            </div>
+             <nav>
             <h1>Colmar <strong>Academy</strong></h1>
             <a href="#">On Campus</a>
             <a href="#">Online</a>
@@ -25,7 +27,7 @@
             <div class="mobile">
                 <img src="./images/ic-login.svg" alt="">
                 <img src="./images/ic-on-campus.svg" alt="">
-                <img src = "./images/ic-online.svg" alt="">
+                <img src="./images/ic-online.svg" alt="">
               </div>
 
         </div>
