--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
             <div class="logo">
             <img src="./images/ic-logo.svg" alt="logo">
             </div>
-             <nav>
+             <div class="navbars">
+            <nav>
             <h1>Colmar <strong>Academy</strong></h1>
             <a href="#">On Campus</a>
             <a href="#">Online</a>
             <a href="#">Companies</a>
             <a href="#">Sign in</a>
             </nav>
+        </div>
             <div class="mobile">
                 <img src="./images/ic-login.svg" alt="">
                 <img src="./images/ic-on-campus.svg" alt="">
