--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header>
         <div class="headercolmar">
             <div class="logo">
-            <img src="./images/ic-logo.svg" alt="logo">
+            <img src="./images/ic-logo.svg" alt="logo"><span>Colmar Academy</span>
             </div>
              <div class="navbars">
             <nav>
