--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
 
      <!---First part-->
      <div class="Firstpart">
-         <img class="banner" src="./images/banner.jpg" alt="banner">
-         <h1>Learn something new everyday</h1>
+         <div class="firstimg">
+        <img class="banner" src="./images/banner.jpg" alt="banner">
+        </div>
+         <div class="firsttxt">
+        <h1>Learn something new everyday</h1>
          <p>Lorem ipsum dolor sit amet, <br>Consecteur adispscing elit<br></p>
          <div class="btnstart"><button class="startt">Start here</button></div>
      </div>
+    </div>
 
      <!---Second part-->
      <div class="secondflex">
