--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <script src="main.js"></script>
+
 </head>
 <body>
     <!---header-->
@@ -42,9 +43,9 @@
         <img class="banner" src="./images/banner.jpg" alt="banner">
         </div>
          <div class="firsttxt">
-        <h1>Learn something new everyday</h1>
-         <p>Lorem ipsum dolor sit amet, <br>Consecteur adispscing elit<br></p>
-         <div class="btnstart"><button class="startt">Start here</button></div>
+              <h1>Learn something new everyday</h1>
+              <p>Lorem ipsum dolor sit amet, <br>Consecteur adispscing elit<br></p>
+              <div class="btnstart"><button class="startt">Start here</button></div>
      </div>
     </div>
 
@@ -177,7 +178,7 @@
          <div class="classtype2"> 
             <div class="secondthesis">
                 <h1>Thesis Exhibit</h1>
-            <video src="./videos/thesis.mp4"></video>
+            <video autoplay loop src="./videos/thesis.mp4"></video>
                 <h2>Reimargine urban</h2>
                 <p>"Curbatiur vitae lubero . Aliquam et commod lectus, nec <br> consequat neque. Sed non accusman urna.Phasellus sed consequat" <br></p>
              </div>
