--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-    <script src="main.js"></script>
-
+    <link rel="shortcut icon" type="image/png" href="./favicon.svg"/>
+  
 </head>
 <body>
     <!---header-->
