--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="./favicon.svg"/>
+    <link rel=“icon” href=“/Colmar-Academy/resources/Images/favicon-Colmar.ico” type=“image/x-icon”>x
   
 </head>
 <body>
@@ -25,6 +25,16 @@
             <a href="#">Online</a>
             <a href="#">Companies</a>
             <a href="#">Sign in</a>
+            
+            <nav class="mobile">
+                <ul class="mobilenav">
+                  <li><img src="./favicon/ic-login.svg" alt="logo"></li>
+                  <li><img src="./favicon/ic-on-campus.svg" alt="on Campus"></li>
+                  <li><img src="./favicon/logo" alt="online"></li>
+                  <li><img src="./favicon/ic-online.svg" alt="login"></li>
+                </ul>
+              </nav>
+
             </nav>
         </div>
             <div class="mobile">
