--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 
 	  
-                <!---Second part-->       
+                <!---Third part-->       
                   <div class="backgroundcolor">
                 <div class="start">
             <h1>Start Learning</h1>
