--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-    <link rel=“icon” href=“/Colmar-Academy/resources/Images/favicon-Colmar.ico” type=“image/x-icon”>x
+    <link rel=“icon” href=“/Colmar-Academy/resources/Images/favicon-Colmar.ico” type=“image/x-icon”>
   
 </head>
 <body>
@@ -71,7 +71,7 @@
 
                       
                             
-                            <div class="column2information">
+            <div class="column2information">
                                 <div class="info">
                                 <div class="container">
                         <img src="./images/information-orientation.jpg" alt="orientation">
