--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
          <div class="classtype2"> 
             <div class="secondthesis">
                 <h1>Thesis Exhibit</h1>
-            <video autoplay loop src="./videos/thesis.mp4"></video>
+                <video autoplay="" loop="" muted="" src="./videos/thesis.mp4"></video>
+
                 <h2>Reimargine urban</h2>
                 <p>"Curbatiur vitae lubero . Aliquam et commod lectus, nec <br> consequat neque. Sed non accusman urna.Phasellus sed consequat" <br></p>
              </div>
