--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                   </div>
         
                   <div class="secondinfo"> 
-                  <div class="infox">
+                  <div class="infoxx">
                     <img src="./images/thesis-now-and-then.jpg" alt="thesis">
                    </div>
                  
